5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4373/executions/1577_2896.log
== TEST (2019-03-26 19:30:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =imput("Digite o nome:")
input()
# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =imput("Digite o nome:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:31:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =imput("Digite o nome:")
input()
# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var =imput("Digite o nome:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:31:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome:")
input()
# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:32:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome:")
input(var)
# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input(var)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:32:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome:")
input(var)
# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.156484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 5, in <module>
    input(var)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:32:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var =input("Digite o nome:")
input(var)
# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input(var)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
